# absent

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  azure-pipelines.yml  conanfile.py  conanfile.txt
include/absent/: absent.h  and_then.h  attempt.h  bind.h  details.h  eval.h  fmap.h  for_each.h  foreach.h  member.h  nullable.h  transform.h
include/absent/adapters/: boost_optional.h  either.h  unique_ptr.h
include/absent/adapters/either/: and_then.h  attempt.h  bind.h  either.h  eval.h  fmap.h  for_each.h  transform.h
include/absent/adaptors/: boost_optional.h
include/absent/combinators/: attempt.h  bind.h  eval.h  fmap.h  foreach.h
include/absent/member/: member.h
include/absent/nullable/: instance.h  syntax.h
include/absent/support/: blank.h  execution_status.h  from_variant.h  member.h  sink.h
include/absent/syntax/: member.h  nullable.h
profiles/: common
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: CMakeLists.txt  absent_tests.cpp  and_then_test.cpp  attempt_test.cpp  bind_test.cpp  boost_optional_test.cpp  customnullable_test.cpp  either_test.cpp  eval_test.cpp  execution_status_test.cpp  fmap_test.cpp  for_each_test.cpp  foreach_test.cpp  from_variant_test.cpp  main.cpp  transform_test.cpp  unique_ptr_test.cpp
tests/either/: and_then_test.cpp  attempt_test.cpp  bind_test.cpp  eval_test.cpp  fmap_test.cpp  for_each_test.cpp  transform_test.cpp
